--- a/errors/nl.po
+++ b/errors/nl.po
@@ -153,6 +153,10 @@ msgstr ""
 "Het netwerk of de server zijn niet beschikbaar of overbelast.  Probeer het "
 "opnieuw."
 
+#: templates/ERR_URN_RESOLVE+html.body.div.h2:16-1
+msgid "A URL for the requested URN could not be retrieved"
+msgstr "De gevraagde URN kon niet worden benaderd"
+
 #: templates/ERR_GATEWAY_FAILURE+html.body.div.p:27-1
 msgid ""
 "A non-recoverable internal failure or configuration problem prevents this "
@@ -264,6 +268,10 @@ msgstr "Cache toegang niet toegestaan."
 msgid "Cache Manager Access Denied."
 msgstr "Cache Manager toegang niet toegestaan."
 
+#: templates/ERR_URN_RESOLVE+html.body.div.blockquote.p:24-1
+msgid "Cannot Resolve URN"
+msgstr "Kan de URN niet herleiden"
+
 #: templates/error-details.txt+SQUID_X509_V_ERR_INFINITE_VALIDATION.descr:1
 msgid "Cert validation infinite loop detected"
 msgstr ""
@@ -352,6 +360,7 @@ msgstr "De Content-Length ontbreekt voor het POST of PUT verzoek."
 #: templates/ERR_TOO_BIG+html.head.meta:-1--1
 #: templates/ERR_UNSUP_HTTPVERSION+html.head.meta:-1--1
 #: templates/ERR_UNSUP_REQ+html.head.meta:-1--1
+#: templates/ERR_URN_RESOLVE+html.head.meta:-1--1
 #: templates/ERR_WRITE_ERROR+html.head.meta:-1--1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.head.meta:-1--1
 msgid "Copyright (C) 1996-2017 The Squid Software Foundation and contributors"
@@ -413,6 +422,7 @@ msgstr "Map: <a href=\"%U\">%U</a>/"
 #: templates/ERR_TOO_BIG+html.body.div.h1:15-1
 #: templates/ERR_UNSUP_HTTPVERSION+html.body.div.h1:15-1
 #: templates/ERR_UNSUP_REQ+html.body.div.h1:15-1
+#: templates/ERR_URN_RESOLVE+html.body.div.h1:15-1
 #: templates/ERR_WRITE_ERROR+html.body.div.h1:15-1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.body.div.h1:15-1
 msgid "ERROR"
@@ -465,6 +475,10 @@ msgstr "FOUT: FTP upload mislukt"
 #: templates/ERR_ZERO_SIZE_OBJECT+html.head.title:5-1
 msgid "ERROR: The requested URL could not be retrieved"
 msgstr "FOUT: De gevraagde URL kon niet worden opgehaald"
+
+#: templates/ERR_URN_RESOLVE+html.head.title:5-1
+msgid "ERROR: The requested URN could not be retrieved"
+msgstr "FOUT: De gevraagde URN kon niet worden opgehaald"
 
 #: templates/ERR_ESI+html.body.div.blockquote.p:24-1
 msgid "ESI Processing failed."
@@ -575,6 +589,7 @@ msgstr ""
 #: templates/ERR_TOO_BIG+html.body.div.p:37-1
 #: templates/ERR_UNSUP_HTTPVERSION+html.body.div.p:35-1
 #: templates/ERR_UNSUP_REQ+html.body.div.p:35-1
+#: templates/ERR_URN_RESOLVE+html.body.div.p:35-1
 #: templates/ERR_WRITE_ERROR+html.body.div.p:37-1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.body.div.p:35-1
 msgid "Generated %T by %h (%s)"
@@ -589,6 +604,10 @@ msgstr ""
 #: templates/error-details.txt+SQUID_ERR_SSL_HANDSHAKE.descr:5
 msgid "Handshake with SSL server failed"
 msgstr ""
+
+#: templates/ERR_URN_RESOLVE+html.body.div.p:27-1
+msgid "Hey, don't expect too much from URNs on %T :)"
+msgstr "Hmmm, verwacht niet teveel van URNs op %T :)"
 
 #: templates/ERR_AGENT_CONFIGURE+html.body.div.p:25-1
 #: templates/ERR_AGENT_WPAD+html.body.div.p:25-1
@@ -936,6 +955,14 @@ msgid ""
 "href=\"%U\">%U</a>"
 msgstr ""
 "De volgende fout is opgetreden tijdens het ophalen van URL: <a href=\"%U\">"
+"%U</a>"
+
+#: templates/ERR_URN_RESOLVE+html.body.div.p:21-1
+msgid ""
+"The following error was encountered while trying to retrieve the URN: <a "
+"href=\"%U\">%U</a>"
+msgstr ""
+"De volgende fout is opgetreden tijdens het ophalen van URN: <a href=\"%U\">"
 "%U</a>"
 
 #: templates/ERR_CONNECT_FAIL+html.body.div.p:29-1
@@ -1304,6 +1331,7 @@ msgstr ""
 #: templates/ERR_TOO_BIG+html.body.div.p:31-1
 #: templates/ERR_UNSUP_HTTPVERSION+html.body.div.p:29-1
 #: templates/ERR_UNSUP_REQ+html.body.div.p:29-1
+#: templates/ERR_URN_RESOLVE+html.body.div.p:29-1
 #: templates/ERR_WRITE_ERROR+html.body.div.p:31-1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.body.div.p:29-1
 msgid "Your cache administrator is <a href=\"mailto:%w%W\">%w</a>."
@@ -1397,6 +1425,9 @@ msgstr ""
 #: templates/error-details.txt+X509_V_ERR_UNSUPPORTED_NAME_SYNTAX.descr:213
 msgid "unsupported or invalid name syntax"
 msgstr ""
+
+#~ msgid "ERROR: The requested URN not be retrieved"
+#~ msgstr "FOUT: De gevraagde URN kon niet worden opgehaald"
 
 #~ msgid "FTP PUT Successful: File Updated"
 #~ msgstr "FTP PUT Succesvol: Bestand Vernieuwd"
