--- a/errors/sr-latn.po
+++ b/errors/sr-latn.po
@@ -146,6 +146,10 @@ msgstr ""
 "Zastoj prilikom čitanja podataka sa mreže.  Mreža ili server su možda "
 "preopterećeni ili nedostupni.  Molimo pokušajte ponovo."
 
+#: templates/ERR_URN_RESOLVE+html.body.div.h2:16-1
+msgid "A URL for the requested URN could not be retrieved"
+msgstr "Adresa (URL) za traženi podatak (URN) ne može da se učita"
+
 #: templates/ERR_GATEWAY_FAILURE+html.body.div.p:27-1
 msgid ""
 "A non-recoverable internal failure or configuration problem prevents this "
@@ -260,6 +264,10 @@ msgstr "Pristup proksi/keš serveru nije dozvoljen."
 msgid "Cache Manager Access Denied."
 msgstr "Pristup proksi/keš server menadžeru nije dozvoljen."
 
+#: templates/ERR_URN_RESOLVE+html.body.div.blockquote.p:24-1
+msgid "Cannot Resolve URN"
+msgstr "Nije moguće prepoznati URN"
+
 #: templates/error-details.txt+SQUID_X509_V_ERR_INFINITE_VALIDATION.descr:1
 msgid "Cert validation infinite loop detected"
 msgstr ""
@@ -348,6 +356,7 @@ msgstr "Nedostaje dužina sadržaja za POST ili PUT zahtev."
 #: templates/ERR_TOO_BIG+html.head.meta:-1--1
 #: templates/ERR_UNSUP_HTTPVERSION+html.head.meta:-1--1
 #: templates/ERR_UNSUP_REQ+html.head.meta:-1--1
+#: templates/ERR_URN_RESOLVE+html.head.meta:-1--1
 #: templates/ERR_WRITE_ERROR+html.head.meta:-1--1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.head.meta:-1--1
 msgid "Copyright (C) 1996-2017 The Squid Software Foundation and contributors"
@@ -409,6 +418,7 @@ msgstr "Direktorijum: <a href=\"%U\">%U</a>/"
 #: templates/ERR_TOO_BIG+html.body.div.h1:15-1
 #: templates/ERR_UNSUP_HTTPVERSION+html.body.div.h1:15-1
 #: templates/ERR_UNSUP_REQ+html.body.div.h1:15-1
+#: templates/ERR_URN_RESOLVE+html.body.div.h1:15-1
 #: templates/ERR_WRITE_ERROR+html.body.div.h1:15-1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.body.div.h1:15-1
 msgid "ERROR"
@@ -460,6 +470,11 @@ msgstr "GREŠKA: FTP upis/upload nije uspeo"
 #: templates/ERR_WRITE_ERROR+html.head.title:5-1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.head.title:5-1
 msgid "ERROR: The requested URL could not be retrieved"
+msgstr "GREŠKA: Tražena adresa (URL) ne može da se učita"
+
+#: templates/ERR_URN_RESOLVE+html.head.title:5-1
+#, fuzzy
+msgid "ERROR: The requested URN could not be retrieved"
 msgstr "GREŠKA: Tražena adresa (URL) ne može da se učita"
 
 #: templates/ERR_ESI+html.body.div.blockquote.p:24-1
@@ -571,6 +586,7 @@ msgstr ""
 #: templates/ERR_TOO_BIG+html.body.div.p:37-1
 #: templates/ERR_UNSUP_HTTPVERSION+html.body.div.p:35-1
 #: templates/ERR_UNSUP_REQ+html.body.div.p:35-1
+#: templates/ERR_URN_RESOLVE+html.body.div.p:35-1
 #: templates/ERR_WRITE_ERROR+html.body.div.p:37-1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.body.div.p:35-1
 msgid "Generated %T by %h (%s)"
@@ -585,6 +601,10 @@ msgstr "HTTP/1.1 Zahtev: funkcija je tražena od HTTP/1.0 softvera."
 #: templates/error-details.txt+SQUID_ERR_SSL_HANDSHAKE.descr:5
 msgid "Handshake with SSL server failed"
 msgstr ""
+
+#: templates/ERR_URN_RESOLVE+html.body.div.p:27-1
+msgid "Hey, don't expect too much from URNs on %T :)"
+msgstr "Hej, ne očekuj previše od URN-a na %T :)"
 
 #: templates/ERR_AGENT_CONFIGURE+html.body.div.p:25-1
 #: templates/ERR_AGENT_WPAD+html.body.div.p:25-1
@@ -928,6 +948,12 @@ msgid ""
 "The following error was encountered while trying to retrieve the URL: <a "
 "href=\"%U\">%U</a>"
 msgstr "Greška učitavanja podataka sa adrese (URL): <a href=\"%U\">%U</a>"
+
+#: templates/ERR_URN_RESOLVE+html.body.div.p:21-1
+msgid ""
+"The following error was encountered while trying to retrieve the URN: <a "
+"href=\"%U\">%U</a>"
+msgstr "Greška učitavanja podataka (URN): <a href=\"%U\">%U</a>"
 
 #: templates/ERR_CONNECT_FAIL+html.body.div.p:29-1
 #, fuzzy
@@ -1288,6 +1314,7 @@ msgstr ""
 #: templates/ERR_TOO_BIG+html.body.div.p:31-1
 #: templates/ERR_UNSUP_HTTPVERSION+html.body.div.p:29-1
 #: templates/ERR_UNSUP_REQ+html.body.div.p:29-1
+#: templates/ERR_URN_RESOLVE+html.body.div.p:29-1
 #: templates/ERR_WRITE_ERROR+html.body.div.p:31-1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.body.div.p:29-1
 msgid "Your cache administrator is <a href=\"mailto:%w%W\">%w</a>."
@@ -1382,6 +1409,9 @@ msgstr ""
 #: templates/error-details.txt+X509_V_ERR_UNSUPPORTED_NAME_SYNTAX.descr:213
 msgid "unsupported or invalid name syntax"
 msgstr ""
+
+#~ msgid "ERROR: The requested URN not be retrieved"
+#~ msgstr "GREŠKA: Tražena podatak (URN) ne može da se učita"
 
 #~ msgid "FTP PUT Successful: File Updated"
 #~ msgstr "FTP PUT uspešan: Fajl je osvežen"
