--- a/errors/pt-br.po
+++ b/errors/pt-br.po
@@ -149,6 +149,10 @@ msgstr ""
 "Tempo esgotado esperando a leitura de dados pela rede. A rede ou o servidor "
 "pode estar desconectado ou congestionado. Por favor, repita sua requisição."
 
+#: templates/ERR_URN_RESOLVE+html.body.div.h2:16-1
+msgid "A URL for the requested URN could not be retrieved"
+msgstr "Uma URL para a URN requisitada não pode ser recuperada"
+
 #: templates/ERR_GATEWAY_FAILURE+html.body.div.p:27-1
 msgid ""
 "A non-recoverable internal failure or configuration problem prevents this "
@@ -267,6 +271,10 @@ msgstr "Acesso negado ao cache."
 msgid "Cache Manager Access Denied."
 msgstr "Acesso negado ao gerenciador de cache."
 
+#: templates/ERR_URN_RESOLVE+html.body.div.blockquote.p:24-1
+msgid "Cannot Resolve URN"
+msgstr "Não é possível resolver URN"
+
 #: templates/error-details.txt+SQUID_X509_V_ERR_INFINITE_VALIDATION.descr:1
 msgid "Cert validation infinite loop detected"
 msgstr ""
@@ -354,6 +362,7 @@ msgstr "Content-Length faltando para requisições POST ou PUT."
 #: templates/ERR_TOO_BIG+html.head.meta:-1--1
 #: templates/ERR_UNSUP_HTTPVERSION+html.head.meta:-1--1
 #: templates/ERR_UNSUP_REQ+html.head.meta:-1--1
+#: templates/ERR_URN_RESOLVE+html.head.meta:-1--1
 #: templates/ERR_WRITE_ERROR+html.head.meta:-1--1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.head.meta:-1--1
 msgid "Copyright (C) 1996-2017 The Squid Software Foundation and contributors"
@@ -415,6 +424,7 @@ msgstr "Diretório: <a href=\"%U\">%U</a>/"
 #: templates/ERR_TOO_BIG+html.body.div.h1:15-1
 #: templates/ERR_UNSUP_HTTPVERSION+html.body.div.h1:15-1
 #: templates/ERR_UNSUP_REQ+html.body.div.h1:15-1
+#: templates/ERR_URN_RESOLVE+html.body.div.h1:15-1
 #: templates/ERR_WRITE_ERROR+html.body.div.h1:15-1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.body.div.h1:15-1
 msgid "ERROR"
@@ -467,6 +477,10 @@ msgstr "ERRO: upload via FTP falhou"
 #: templates/ERR_ZERO_SIZE_OBJECT+html.head.title:5-1
 msgid "ERROR: The requested URL could not be retrieved"
 msgstr "ERRO: A URL requisitada não pode ser recuperada"
+
+#: templates/ERR_URN_RESOLVE+html.head.title:5-1
+msgid "ERROR: The requested URN could not be retrieved"
+msgstr "ERRO: A URN requisitada não pode ser recuperada"
 
 #: templates/ERR_ESI+html.body.div.blockquote.p:24-1
 msgid "ESI Processing failed."
@@ -575,6 +589,7 @@ msgstr "Falha de Gateway Proxy"
 #: templates/ERR_TOO_BIG+html.body.div.p:37-1
 #: templates/ERR_UNSUP_HTTPVERSION+html.body.div.p:35-1
 #: templates/ERR_UNSUP_REQ+html.body.div.p:35-1
+#: templates/ERR_URN_RESOLVE+html.body.div.p:35-1
 #: templates/ERR_WRITE_ERROR+html.body.div.p:37-1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.body.div.p:35-1
 msgid "Generated %T by %h (%s)"
@@ -589,6 +604,10 @@ msgstr ""
 #: templates/error-details.txt+SQUID_ERR_SSL_HANDSHAKE.descr:5
 msgid "Handshake with SSL server failed"
 msgstr "Negociação com servidor SSL falhou"
+
+#: templates/ERR_URN_RESOLVE+html.body.div.p:27-1
+msgid "Hey, don't expect too much from URNs on %T :)"
+msgstr "Olha, não espere muito por URNs em %T :)"
 
 #: templates/ERR_AGENT_CONFIGURE+html.body.div.p:25-1
 #: templates/ERR_AGENT_WPAD+html.body.div.p:25-1
@@ -941,6 +960,14 @@ msgid ""
 "href=\"%U\">%U</a>"
 msgstr ""
 "O seguinte erro foi encontrado ao tentar recuperar a URL: <a href=\"%U\">%U</"
+"a>"
+
+#: templates/ERR_URN_RESOLVE+html.body.div.p:21-1
+msgid ""
+"The following error was encountered while trying to retrieve the URN: <a "
+"href=\"%U\">%U</a>"
+msgstr ""
+"O seguinte erro foi encontrado ao tentar recuperar a URN: <a href=\"%U\">%U</"
 "a>"
 
 #: templates/ERR_CONNECT_FAIL+html.body.div.p:29-1
@@ -1313,6 +1340,7 @@ msgstr ""
 #: templates/ERR_TOO_BIG+html.body.div.p:31-1
 #: templates/ERR_UNSUP_HTTPVERSION+html.body.div.p:29-1
 #: templates/ERR_UNSUP_REQ+html.body.div.p:29-1
+#: templates/ERR_URN_RESOLVE+html.body.div.p:29-1
 #: templates/ERR_WRITE_ERROR+html.body.div.p:31-1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.body.div.p:29-1
 msgid "Your cache administrator is <a href=\"mailto:%w%W\">%w</a>."
@@ -1406,6 +1434,9 @@ msgstr ""
 #: templates/error-details.txt+X509_V_ERR_UNSUPPORTED_NAME_SYNTAX.descr:213
 msgid "unsupported or invalid name syntax"
 msgstr ""
+
+#~ msgid "ERROR: The requested URN not be retrieved"
+#~ msgstr "ERRO: A URN requisitada não pode ser recuperada"
 
 #~ msgid "FTP PUT Successful: File Updated"
 #~ msgstr "FTP - PUT bem sucedido: Arquivo Atualizado"
