--- a/errors/tr.po
+++ b/errors/tr.po
@@ -144,6 +144,10 @@ msgstr ""
 "İstemiş olduğunuz bilgileri ağdan okuma sırasında okuma zamanı doldu. Hedef "
 "sunucu kapalı veya çok meşgul olabilir. Lütfen isteğinizi tekrar giriniz."
 
+#: templates/ERR_URN_RESOLVE+html.body.div.h2:16-1
+msgid "A URL for the requested URN could not be retrieved"
+msgstr "URN'ye erişmek için bir URL alınamadı."
+
 #: templates/ERR_GATEWAY_FAILURE+html.body.div.p:27-1
 msgid ""
 "A non-recoverable internal failure or configuration problem prevents this "
@@ -258,6 +262,10 @@ msgstr "Cache Sunucusunu Kullanamazsınız."
 msgid "Cache Manager Access Denied."
 msgstr "Cache Yönetici girişi yasak."
 
+#: templates/ERR_URN_RESOLVE+html.body.div.blockquote.p:24-1
+msgid "Cannot Resolve URN"
+msgstr "URN çözülemedi."
+
 #: templates/error-details.txt+SQUID_X509_V_ERR_INFINITE_VALIDATION.descr:1
 msgid "Cert validation infinite loop detected"
 msgstr ""
@@ -346,6 +354,7 @@ msgstr "Content-Length, POST veya PUT istekleri için eksik."
 #: templates/ERR_TOO_BIG+html.head.meta:-1--1
 #: templates/ERR_UNSUP_HTTPVERSION+html.head.meta:-1--1
 #: templates/ERR_UNSUP_REQ+html.head.meta:-1--1
+#: templates/ERR_URN_RESOLVE+html.head.meta:-1--1
 #: templates/ERR_WRITE_ERROR+html.head.meta:-1--1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.head.meta:-1--1
 msgid "Copyright (C) 1996-2017 The Squid Software Foundation and contributors"
@@ -407,6 +416,7 @@ msgstr "Dizin: <a href=\"%U\">%U</a>/"
 #: templates/ERR_TOO_BIG+html.body.div.h1:15-1
 #: templates/ERR_UNSUP_HTTPVERSION+html.body.div.h1:15-1
 #: templates/ERR_UNSUP_REQ+html.body.div.h1:15-1
+#: templates/ERR_URN_RESOLVE+html.body.div.h1:15-1
 #: templates/ERR_WRITE_ERROR+html.body.div.h1:15-1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.body.div.h1:15-1
 msgid "ERROR"
@@ -458,6 +468,11 @@ msgstr "HATA: FTP dosya yüklemesi yapılamadı"
 #: templates/ERR_WRITE_ERROR+html.head.title:5-1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.head.title:5-1
 msgid "ERROR: The requested URL could not be retrieved"
+msgstr "HATA: İstenilen URL'e ulaşılamadı"
+
+#: templates/ERR_URN_RESOLVE+html.head.title:5-1
+#, fuzzy
+msgid "ERROR: The requested URN could not be retrieved"
 msgstr "HATA: İstenilen URL'e ulaşılamadı"
 
 #: templates/ERR_ESI+html.body.div.blockquote.p:24-1
@@ -569,6 +584,7 @@ msgstr ""
 #: templates/ERR_TOO_BIG+html.body.div.p:37-1
 #: templates/ERR_UNSUP_HTTPVERSION+html.body.div.p:35-1
 #: templates/ERR_UNSUP_REQ+html.body.div.p:35-1
+#: templates/ERR_URN_RESOLVE+html.body.div.p:35-1
 #: templates/ERR_WRITE_ERROR+html.body.div.p:37-1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.body.div.p:35-1
 msgid "Generated %T by %h (%s)"
@@ -582,6 +598,10 @@ msgstr ""
 #: templates/error-details.txt+SQUID_ERR_SSL_HANDSHAKE.descr:5
 msgid "Handshake with SSL server failed"
 msgstr ""
+
+#: templates/ERR_URN_RESOLVE+html.body.div.p:27-1
+msgid "Hey, don't expect too much from URNs on %T :)"
+msgstr "%T de URN den fazla birsey beklemeyin. :)"
 
 #: templates/ERR_AGENT_CONFIGURE+html.body.div.p:25-1
 #: templates/ERR_AGENT_WPAD+html.body.div.p:25-1
@@ -918,6 +938,12 @@ msgid ""
 msgstr ""
 "URL adresine erişilmeye çalışıyorken hata meydana geldi: <a href=\"%U\">%U</"
 "a>"
+
+#: templates/ERR_URN_RESOLVE+html.body.div.p:21-1
+msgid ""
+"The following error was encountered while trying to retrieve the URN: <a "
+"href=\"%U\">%U</a>"
+msgstr "URN: <a href=\"%U\">%U</a> erişilirken bir hata ile karşılaşıldı."
 
 #: templates/ERR_CONNECT_FAIL+html.body.div.p:29-1
 #, fuzzy
@@ -1270,6 +1296,7 @@ msgstr ""
 #: templates/ERR_TOO_BIG+html.body.div.p:31-1
 #: templates/ERR_UNSUP_HTTPVERSION+html.body.div.p:29-1
 #: templates/ERR_UNSUP_REQ+html.body.div.p:29-1
+#: templates/ERR_URN_RESOLVE+html.body.div.p:29-1
 #: templates/ERR_WRITE_ERROR+html.body.div.p:31-1
 #: templates/ERR_ZERO_SIZE_OBJECT+html.body.div.p:29-1
 msgid "Your cache administrator is <a href=\"mailto:%w%W\">%w</a>."
@@ -1361,6 +1388,9 @@ msgstr ""
 #: templates/error-details.txt+X509_V_ERR_UNSUPPORTED_NAME_SYNTAX.descr:213
 msgid "unsupported or invalid name syntax"
 msgstr ""
+
+#~ msgid "ERROR: The requested URN not be retrieved"
+#~ msgstr "HATA: İstenilen URN'e ulaşılamadı"
 
 #~ msgid "FTP PUT Successful: File Updated"
 #~ msgstr "FTP PUT Başarılı: Dosya güncellendi"
