Mention debug section in manual page
as suggested in review

Co-authored-by: Alex Rousskov <rousskov@measurement-factory.com>

--- a/src/acl/external/time_quota/ext_time_quota_acl.8
+++ b/src/acl/external/time_quota/ext_time_quota_acl.8
@@ -36,7 +36,7 @@ Default is 300 seconds (5 minutes).
 .
 .if !'po4a'hide' .TP
 .if !'po4a'hide' .B "\-d"
-Enables debug logging to stderr, at growing levels of verbosity from 0 to 9.
+Sets verbosity level for debugging section 82 (0-9; defaults to 1; see debug_options).
 .
 .if !'po4a'hide' .TP
 .if !'po4a'hide' .B "\-h"
