--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,32 @@
+Changes in squid-7.0.2 (19 Jun 2025):
+
+	- Bug 5352: Do not get stuck in RESPMOD after pausing peer read(2)
+	- Bug 5316: Release note says version 6 still for testing
+	- Bug 5489: Fix "make check" linking on Solaris
+	- Do not duplicate received Surrogate-Capability in sent requests
+	- Fix GCC v13 LTO build [-Walloc-size-larger-than=]
+	- Fix OpenSSL build with GCC v15.1.1 [-Wformat-truncation=]
+	- Fix tls-dh support for DHE parameters with OpenSSL v3+
+	- Fix SNMP cacheNumObjCount -- number of cached objects
+	- Fix Mem::Segment::open() stub to fix build without shm_open()
+	- Disable EUI when arpreq is missing and cannot be defined
+	- NoNewGlobals for cbdata_htable
+	- Portability: add include guards to ldap_backend.cc
+	- Maintenance: Remove shared LDADD
+	- CI: update FreeBSD version
+	- CI: Do not classify "no failures" stats as test-build errors
+	- CI: Fix gperf 3.2 output filter
+	- CI: Pin OpenBSD 7.6
+	- CI: Update tested Linux versions to current
+	- MinGW: use nameless unions in ext_ad_group_acl
+	- MinGW: do not build ext_edirectory_userip_acl
+	- MinGW: add mkdir adapter
+	- MinGW: fix store/Controller.cc build
+	- MinGW: fix aio compatibility layer
+	- MinGW: add libnettle to negotiate_sspi_auth
+	- negotiate_sspi_auth: Fix command debugging (-v)
+	- ntlm_sspi_auth: Fix missing base64 symbol linkage
+
 Changes in squid-7.0.1 (2 Feb 2025):
 
 	- Remove Edge Side Include (ESI) protocol
